fix z-index for header

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,12 +1,13 @@
 /* ---- MOBILE ---- */
 
 .header {
-  /* background-color: rgba(255, 255, 255, 0.13); */
   background-color: transparent;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
+
+  z-index: 2;
 }
 
 .header-wrapper {
